--- a/app.json
+++ b/app.json
@@ -22,6 +22,10 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "scheme": "tpj",
+    "plugins": [
+      "expo-font"
+    ]
   }
 }
